paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.compile.log
error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:20:41
   |
20 |     if !expect_type(get_type_id((1i8) + 0i32), TypeId::of::<i32>()) {
   |                                         ^^^^ expected `i8`, found `i32`

error[E0277]: cannot add `i32` to `i8`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:20:39
   |
20 |     if !expect_type(get_type_id((1i8) + 0i32), TypeId::of::<i32>()) {
   |                                       ^ no implementation for `i8 + i32`
   |
   = help: the trait `Add<i32>` is not implemented for `i8`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i8` implements `Add<i8>`
             `&i8` implements `Add`
             `i8` implements `Add<&i8>`
             `i8` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:23:41
   |
23 |     if !expect_type(get_type_id((1i8) + 0i32), TypeId::of::<i32>()) {
   |                                         ^^^^ expected `i8`, found `i32`

error[E0277]: cannot add `i32` to `i8`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:23:39
   |
23 |     if !expect_type(get_type_id((1i8) + 0i32), TypeId::of::<i32>()) {
   |                                       ^ no implementation for `i8 + i32`
   |
   = help: the trait `Add<i32>` is not implemented for `i8`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i8` implements `Add<i8>`
             `&i8` implements `Add`
             `i8` implements `Add<&i8>`
             `i8` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:26:41
   |
26 |     if !expect_type(get_type_id((1u8) + 0i32), TypeId::of::<i32>()) {
   |                                         ^^^^ expected `u8`, found `i32`

error[E0277]: cannot add `i32` to `u8`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:26:39
   |
26 |     if !expect_type(get_type_id((1u8) + 0i32), TypeId::of::<i32>()) {
   |                                       ^ no implementation for `u8 + i32`
   |
   = help: the trait `Add<i32>` is not implemented for `u8`
   = help: the following other types implement trait `Add<Rhs>`:
             `&u8` implements `Add<u8>`
             `&u8` implements `Add`
             `u8` implements `Add<&u8>`
             `u8` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:29:42
   |
29 |     if !expect_type(get_type_id((1i16) + 0i32), TypeId::of::<i32>()) {
   |                                          ^^^^ expected `i16`, found `i32`

error[E0277]: cannot add `i32` to `i16`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:29:40
   |
29 |     if !expect_type(get_type_id((1i16) + 0i32), TypeId::of::<i32>()) {
   |                                        ^ no implementation for `i16 + i32`
   |
   = help: the trait `Add<i32>` is not implemented for `i16`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i16` implements `Add<i16>`
             `&i16` implements `Add`
             `i16` implements `Add<&i16>`
             `i16` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:32:42
   |
32 |     if !expect_type(get_type_id((1u16) + 0i32), TypeId::of::<i32>()) {
   |                                          ^^^^ expected `u16`, found `i32`

error[E0277]: cannot add `i32` to `u16`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c1/sample_004/target.rs:32:40
   |
32 |     if !expect_type(get_type_id((1u16) + 0i32), TypeId::of::<i32>()) {
   |                                        ^ no implementation for `u16 + i32`
   |
   = help: the trait `Add<i32>` is not implemented for `u16`
   = help: the following other types implement trait `Add<Rhs>`:
             `&u16` implements `Add<u16>`
             `&u16` implements `Add`
             `u16` implements `Add<&u16>`
             `u16` implements `Add`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.